kompose-local-adjusted/postgresdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresdb
  name: postgresdb
  namespace: vegapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresdb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/vegapp-default: "true"
        io.kompose.service: postgresdb
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: POSTGRESS_PASSWORD_CICD
            - name: POSTGRES_USER
              value: postgres
          image: gitlab.uliege.be:5050/speam/2023-2024/team-6/postgresdb:latest
          name: postgresdb
          ports:
            - containerPort: 5432
              hostPort: 5433
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db
      restartPolicy: Always
      imagePullSecrets:
        - name: team-06-gitlab-registry-deploy-token
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
status: {}
