kompose-local-adjusted/springboot-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: springboot-server
  name: springboot-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: springboot-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/vegapp-default: "true"
        io.kompose.service: springboot-server
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: POSTGRESS_PASSWORD_CICD
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://postgresdb:5432/postgres
            - name: SPRING_DATASOURCE_USERNAME
              value: postgres
          image: gitlab.uliege.be:5050/speam/2023-2024/team-6/vegapp-server:latest
          name: springboot-server
          ports:
            - containerPort: 8090
              protocol: TCP
          resources: {}
          stdin: true
          tty: true
      restartPolicy: Always
      imagePullSecrets:
        - name: team-06-gitlab-registry-deploy-token
status: {}
