kompose-local-adjusted/postgresdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresdb
  name: postgresdb
spec:
  ports:
    - name: "5433"
      port: 5433
      targetPort: 5432
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: postgresdb
status:
  loadBalancer: {}
